apps/budo/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budo-api
  namespace: budo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budo-api
  template:
    metadata:
      labels:
        app: budo-api
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: worker

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: budo-api

      containers:
      - name: budo-api
        image: ghcr.io/harris-consult/budo-api:latest
        ports:
        - containerPort: 5000
