apps/budo/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budo-api
  namespace: budo
spec:
  selector:
    app: budo-api
  ports:
  - port: 80
    targetPort: 5000
